// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/FbxModalWrapper snapshots renders the default correctly 1`] = `
<div class="fbx-ui-modal-wrapper layout-column">
  <div class="header layout-row vertical-center">
    <div class="font-18">snapshot title</div>
    <fbx-close-button-stub class="modal-close-button"></fbx-close-button-stub>
  </div>
  <div class="body">
    <div></div>
  </div>
</div>
`;

exports[`Components/FbxModalWrapper snapshots renders with loading correctly 1`] = `
<div class="fbx-ui-modal-wrapper layout-column">
  <div class="header layout-row vertical-center">
    <div class="font-18">snapshot title</div>
    <fbx-close-button-stub class="modal-close-button"></fbx-close-button-stub>
  </div>
  <div class="body">
    <div class="loading"></div>
  </div>
</div>
`;

exports[`Components/FbxModalWrapper snapshots renders without title correctly 1`] = `
<div class="fbx-ui-modal-wrapper layout-column">
  <div class="no-header layout-row vertical-center">
    <div class="font-18"></div>
    <fbx-close-button-stub class="modal-close-button"></fbx-close-button-stub>
  </div>
  <div class="body">
    <div></div>
  </div>
</div>
`;
